--- a/sendotp.css
+++ b/sendotp.css
@@ -1,27 +1,36 @@
-/* General Styles */
+/* Global Styles */
 body {
-  background-color: #f3f4f8;
   font-family: Helvetica, Arial, sans-serif;
   color: #0a0a0a;
   font-size: 14px;
-  padding: 0;
+  line-height: 1.43;
+  background-color: #f3f4f8;
+  margin: 0;
   min-width: 600px;
+  padding: 0;
+  text-align: left;
+  width: 100% !important;
 }
 
 table {
-  width: 100%;
   border-collapse: collapse;
-  text-align: left;
-  vertical-align: top;
+  width: 100%;
+}
+
+a {
+  text-decoration: none;
 }
 
 .miro__container {
   max-width: 600px;
   min-width: 600px;
   margin: 0 auto;
+  text-align: left;
 }
 
 .miro__content-wrapper {
+  margin: 0;
+  padding: 0;
   padding-top: 43px;
 }
 
@@ -30,6 +39,8 @@ table {
 }
 
 .miro__header {
+  height: 100%;
+  min-height: 100px;
   padding: 0 40px;
 }
 
@@ -38,14 +49,15 @@ table {
 }
 
 .miro__col-header-logo {
-  width: 50%;
   padding-top: 32px;
+  width: 50%;
+  word-wrap: break-word;
 }
 
 .miro__col-header-btn {
-  width: 50%;
   padding-top: 26px;
   text-align: right;
+  width: 50%;
 }
 
 .miro-btn {
@@ -53,36 +65,34 @@ table {
   border: 1px solid #050038;
   border-radius: 4px;
   color: #050038;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 16px;
+  font-weight: 400;
   height: 48px;
   line-height: 48px;
-  width: 128px;
-  display: inline-block;
   text-align: center;
+  text-decoration: none;
+  width: 128px;
 }
 
 .miro__content-body {
-  padding: 0 40px;
-}
-
-.miro-title-block {
-  padding: 40px;
+  padding: 40px 40px 36px;
 }
 
 .miro-title-block__title {
-  color: #050038;
   font-size: 42px;
+  color: #050038;
   font-weight: 700;
+  line-height: 1.24;
 }
 
 .miro-title-block__subtitle {
-  color: #050038;
   font-size: 20px;
+  color: #050038;
+  font-weight: 400;
+  opacity: .6;
   margin-top: 16px;
-  opacity: 0.6;
-}
-
-.miro-confirmation-code-block {
-  padding: 0 40px;
 }
 
 .miro-confirmation-code-block__code {
@@ -90,6 +100,7 @@ table {
   border-radius: 4px;
   color: #050038;
   font-size: 48px;
+  font-weight: 700;
   height: 128px;
   line-height: 128px;
   text-align: center;
@@ -101,56 +112,18 @@ table {
 }
 
 .miro__footer {
-  padding: 42px 0 72px 0;
+  padding-bottom: 72px;
+  padding-top: 42px;
   text-align: center;
 }
 
 .miro__footer-title {
-  color: #050038;
   font-size: 16px;
-  opacity: 0.7;
+  color: #050038;
+  opacity: .7;
+  line-height: 1.38;
 }
 
 .miro__footer-title a {
   color: inherit;
-  text-decoration: none;
-}
-
-@media only screen and (max-width: 600px) {
-  .miro__content-wrapper {
-    padding: 20px;
-  }
-
-  .miro__col-header-logo, .miro__col-header-btn {
-    width: 100%;
-    text-align: center;
-  }
-
-  .miro__col-header-btn {
-    padding-top: 10px;
-  }
-
-  .miro-title-block__title {
-    font-size: 32px;
-  }
-
-  .miro-title-block__subtitle {
-    font-size: 18px;
-  }
-
-  .miro-confirmation-code-block__code {
-    font-size: 36px;
-    height: 100px;
-    line-height: 100px;
-  }
-
-  .miro-btn {
-    width: 100%;
-    padding: 15px;
-    font-size: 18px;
-  }
-
-  .miro__footer-title {
-    font-size: 14px;
-  }
 }
