--- a/sendotp.css
+++ b/sendotp.css
@@ -1,15 +1,25 @@
 /* Global Styles */
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 body {
   font-family: Helvetica, Arial, sans-serif;
+  background-color: #f3f4f8;
   color: #0a0a0a;
   font-size: 14px;
   line-height: 1.43;
-  background-color: #f3f4f8;
   margin: 0;
   min-width: 600px;
   padding: 0;
-  text-align: left;
   width: 100% !important;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
 }
 
 table {
@@ -17,113 +27,177 @@ table {
   width: 100%;
 }
 
-a {
-  text-decoration: none;
-}
-
+/* Container and Layout */
 .miro__container {
   max-width: 600px;
   min-width: 600px;
   margin: 0 auto;
   text-align: left;
+  background-color: #fff;
 }
 
 .miro__content-wrapper {
-  margin: 0;
   padding: 0;
-  padding-top: 43px;
+  margin: 0;
+  padding-top: 30px;
 }
 
 .miro__content {
+  padding: 20px;
   background-color: #fff;
 }
 
 .miro__header {
-  height: 100%;
-  min-height: 100px;
-  padding: 0 40px;
+  padding: 20px 40px;
+  background-color: #fff;
+  border-bottom: 2px solid #e1e0e7;
 }
 
 .miro__header-content {
   width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .miro__col-header-logo {
-  padding-top: 32px;
+  padding-top: 10px;
   width: 50%;
-  word-wrap: break-word;
 }
 
 .miro__col-header-btn {
-  padding-top: 26px;
-  text-align: right;
   width: 50%;
+  text-align: right;
+  padding-top: 10px;
 }
 
 .miro-btn {
-  background-color: #fff;
-  border: 1px solid #050038;
+  background-color: #2a79ff;
+  border: none;
+  color: #fff;
+  padding: 12px 25px;
   border-radius: 4px;
-  color: #050038;
-  cursor: pointer;
-  display: inline-block;
   font-size: 16px;
-  font-weight: 400;
-  height: 48px;
-  line-height: 48px;
+  font-weight: 700;
+  cursor: pointer;
   text-align: center;
-  text-decoration: none;
-  width: 128px;
+  display: inline-block;
 }
 
+.miro-btn:hover {
+  background-color: #1f5bb5;
+}
+
+/* Title and Body Section */
 .miro__content-body {
   padding: 40px 40px 36px;
 }
 
+.miro-title-block {
+  text-align: center;
+  padding: 20px 0;
+}
+
 .miro-title-block__title {
-  font-size: 42px;
-  color: #050038;
+  font-size: 36px;
   font-weight: 700;
-  line-height: 1.24;
+  color: #050038;
+  margin-bottom: 15px;
 }
 
 .miro-title-block__subtitle {
-  font-size: 20px;
-  color: #050038;
+  font-size: 18px;
   font-weight: 400;
-  opacity: .6;
-  margin-top: 16px;
+  color: #050038;
+  opacity: 0.7;
+  margin-bottom: 30px;
+}
+
+.miro-confirmation-code-block {
+  text-align: center;
+  margin-bottom: 30px;
 }
 
 .miro-confirmation-code-block__code {
   background-color: #f3f4f8;
-  border-radius: 4px;
-  color: #050038;
+  border-radius: 8px;
   font-size: 48px;
   font-weight: 700;
-  height: 128px;
-  line-height: 128px;
-  text-align: center;
+  color: #050038;
+  height: 100px;
+  line-height: 100px;
+  display: inline-block;
+  width: 100%;
 }
 
+/* Separator Line */
 .miro__sep {
   background-color: #e1e0e7;
   height: 1px;
+  margin-top: 40px;
+  margin-bottom: 30px;
 }
 
+/* Footer Section */
 .miro__footer {
-  padding-bottom: 72px;
-  padding-top: 42px;
+  padding: 40px;
+  background-color: #fff;
   text-align: center;
 }
 
 .miro__footer-title {
-  font-size: 16px;
+  font-size: 14px;
   color: #050038;
-  opacity: .7;
-  line-height: 1.38;
+  opacity: 0.7;
+  line-height: 1.5;
+  font-weight: 400;
 }
 
 .miro__footer-title a {
-  color: inherit;
+  color: #2a79ff;
+  font-weight: 700;
+}
+
+.miro__footer-title a:hover {
+  color: #1f5bb5;
+}
+
+/* Responsiveness */
+@media only screen and (max-width: 600px) {
+  .miro__container {
+    width: 100%;
+    padding: 10px;
+  }
+
+  .miro__header-content {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .miro__col-header-logo {
+    width: 100%;
+    padding-bottom: 10px;
+  }
+
+  .miro__col-header-btn {
+    width: 100%;
+    padding-top: 10px;
+  }
+
+  .miro-btn {
+    width: 100%;
+    padding: 12px;
+  }
+
+  .miro-title-block__title {
+    font-size: 32px;
+  }
+
+  .miro-title-block__subtitle {
+    font-size: 16px;
+  }
+
+  .miro-confirmation-code-block__code {
+    font-size: 40px;
+  }
 }
